--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,260 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.movie-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  padding: 20px;
+  max-width: 100%;
+  box-sizing: border-box;
+}
+
+.banner {
+  position: relative;
+  width: 100%;
+  height: 600px;
+  border: 2px solid #d1d5db;
+  overflow: hidden;
+}
+
+.banner-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.banner-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  font-size: 24px;
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  overflow: hidden;
+  position: relative;
+  max-width: 100%;
+}
+
+.movie-grid-item {
+  width: calc(20% - 16px);
+  margin-right: 16px;
+  margin-bottom: 16px;
+}
+
+.movie-card {
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+  box-shadow: none;
+  transition: transform 0.2s;
+  overflow: hidden;
+  box-sizing: border-box;
+  border: none;
+}
+
+.movie-card:hover {
+  transform: translateY(-5px);
+}
+
+.movie-poster {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.movie-title {
+  margin: 12px 0;
+  font-size: 1rem;
+  font-weight: bold;
+  text-align: left;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.row-break {
+  flex-basis: 100%;
+  height: 0;
+  border: none;
+}
+
+.featured-title-container {
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.featured-title-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: calc(100% - 32px);
+}
+
+.featured-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: left;
+  margin: 0;
+}
+
+.see-more-button {
+  background-color: transparent;
+  color: red;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.see-more-button:focus {
+  outline: none;
+}
+
+.footer {
+  width: 100%;
+  padding: 20px;
+  background-color: #f8f8f8;
+  text-align: center;
+}
+
+.social-icons i {
+  margin-right: 10px;
+}
+
+.paragraph {
+  font-size: 14px;
+  margin: 10px 0;
+  display: inline-block;
+  width: calc(7.33% - 10px);
+  box-sizing: border-box;
+}
+
+.copyright {
+  font-size: 12px;
+  margin: 0;
+}
+
+@media (max-width: 1024px) {
+  #searchInput {
+    width: 100% !important;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .fa-search {
+    top: 50% !important;
+    transform: translateY(-50%);
+    right: 10px !important;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .row {
+    justify-content: center;
+  }
+
+  .movie-grid-item {
+    width: calc(33.33% - 10px);
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
+  #searchInput {
+    width: calc(100% - 60px);
+    max-width: 400px;
+    left: 50%;
+    transform: translateX(-80%);
+    position: relative;
+    background-color: transparent;
+    border: none;
+    color: white;
+    margin-top: 50px;
+  }
+
+  .fa-search {
+    top: 50%;
+    left: 550px;
+    transform: translateY(-1540%);
+    position: absolute;
+  }
+}
+
+@media (max-width: 767px) {
+  .row {
+    justify-content: center;
+  }
+
+  .movie-grid-item {
+    width: calc(50% - 10px);
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
+
+  #searchInput {
+    width: calc(100% - 60px);
+    max-width: 200px;
+    left: 80px;
+    transform: translateX(-160%);
+    position: relative;
+    background-color: transparent;
+    border: none;
+    color: white;
+    margin-top: 30px;
+
+    padding: 8px 10px;
+    font-size: 14px;
+  }
+
+  .fa-search {
+    top: 50%;
+    left: 300px;
+    transform: translateY(-1630%);
+    position: absolute;
+  }
+  .banner-content {
+    position: absolute;
+    top: unset;
+    bottom: 20px;
+    left: 20px;
+    text-align: left;
+    width: calc(100% - 40px);
+  }
+
+  .trailer-textbox {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    text-align: left;
+    width: calc(100% - 40px);
+  }
+
+  .trailer-textbox img {
+    height: 36px;
+  }
+
+  .trailer-text {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #fff;
+    display: inline-block;
+    background-color: #be173c;
+    padding: 8px 16px;
+    border-radius: 6px;
+  }
 }
